--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   table_calendar: ^3.0.3
   intl: ^0.17.0
+  top_snackbar_flutter: ^1.0.2
 
 dev_dependencies:
   flutter_test:
