--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   table_calendar: ^3.0.3
   intl: ^0.17.0
   top_snackbar_flutter: ^1.0.2
+  image_picker: ^0.8.4+10
 
 dev_dependencies:
   flutter_test:
