--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   top_snackbar_flutter: ^1.0.2
   image_picker: ^0.8.4+10
+  percent_indicator: ^4.0.0
 
 dev_dependencies:
   flutter_test:
