--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   contrast_checker: ^0.0.2
   fl_chart: ^0.46.0
   shared_preferences: ^2.0.13
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
