--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.0.13
   flutter_switch: ^0.3.2
   animated_bottom_navigation_bar: ^0.3.2
+  boardview: ^0.2.2
 
 dev_dependencies:
   flutter_test:
